--- a/resources/views/Auth/password/change.twig
+++ b/resources/views/Auth/password/change.twig
@@ -7,15 +7,15 @@
                 <div class="panel-heading">Sign in</div>
                 <div class="panel-body">
 
-                    <form action="{{ path_for('auth.signin') }}" method="post" autocomplete="off">
-                        <div class="form-group{{ errors.email ? ' has-error': '' }}">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="you@domain.com"
-                                   class="form-control" value="{{ old.email }}"/>
-                            {% if errors.email %}
-                                <span class="help-block">{{ errors.email | first }}</span>
+                    <form action="{{ path_for('auth.password.change') }}" method="post" autocomplete="off">
+                        <div class="form-group{{ errors.password_old ? ' has-error': '' }}">
+                            <label for="password_old">Current Password</label>
+                            <input type="password" name="password_old" id="password_old" class="form-control"/>
+                            {% if errors.password_old %}
+                                <span class="help-block">{{ errors.password_old | first }}</span>
                             {% endif %}
                         </div>
+
 
                         <div class="form-group{{ errors.password ? ' has-error': '' }}">
                             <label for="password">Password</label>
