--- a/resources/views/Auth/signup.twig
+++ b/resources/views/Auth/signup.twig
@@ -10,7 +10,8 @@
                     <form action="{{ path_for('auth.signup') }}" method="post" autocomplete="off">
                         <div class="form-group{{ errors.email ? ' has-error': '' }}">
                             <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="you@domain.com" class="form-control" value="{{ old.email }}"/>
+                            <input type="email" name="email" id="email" placeholder="you@domain.com"
+                                   class="form-control" value="{{ old.email }}"/>
                             {% if errors.email %}
                                 <span class="help-block">{{ errors.email | first }}</span>
                             {% endif %}
@@ -24,14 +25,15 @@
                         </div>
                         <div class="form-group{{ errors.password ? ' has-error': '' }}">
                             <label for="password">Password</label>
-                            <input type="password" name="password" id="password" class="form-control" value="{{ old.password }}"/>
+                            <input type="password" name="password" id="password" class="form-control"
+                                   value="{{ old.password }}"/>
                             {% if errors.password %}
                                 <span class="help-block">{{ errors.password | first }}</span>
                             {% endif %}
                         </div>
                         <button type="submit" class="btn btn-default">Sign up</button>
                         {{ csrf.field | raw }}
-                </form>
+                    </form>
                 </div>
             </div>
         </div>
