--- a/resources/views/templates/partial/navigation.twig
+++ b/resources/views/templates/partial/navigation.twig
@@ -1,27 +1,32 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar">Toggle navigation</span>
                 <span class="icon-bar">Toggle navigation</span>
                 <span class="icon-bar">Toggle navigation</span>
             </button>
-            <a class="navbar-brand" href="#">codecourse</a>
+            <a class="navbar-brand" href="{{ path_for('Home') }}">Daryaei</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Home</a> </li>
+                <li><a href="{{ path_for('Home') }}">Home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mabel Garrett <span class="caret"></span> </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Change Password</a> </li>
-                        <li><a href="#">Sign out</a> </li>
-                    </ul>
-                </li>
-                <li><a href="#">Sign up</a> </li>
-                <li><a href="#">Sign in</a> </li>
+                {% if auth.check %}
+                    <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">{{ auth.user.name }} <span class="caret"></span> </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ path_for('auth.password.change') }}">Change Password</a></li>
+                            <li><a href="{{ path_for('auth.signout') }}">Sign out</a></li>
+                        </ul>
+                    </li>
+                {% else %}
+                    <li><a href="{{ path_for('auth.signup') }}">Sign up</a></li>
+                    <li><a href="{{ path_for('auth.signin') }}">Sign in</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
